feat: support operation log list view
